--- a/themes/package.json
+++ b/themes/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "stylelint \"**/*.scss\"",
-    "style": "sass cool/scss/style.scss cool/css/style.css --no-source-map",
-    "style-min": "sass cool/scss/style.scss cool/css/style.min.css --no-source-map --style compressed",
     "watch": "sass cool/scss/style.scss cool/css/style.css --no-source-map --watch",
-    "watch-min": "sass cool/scss/style.scss cool/css/style.min.css --no-source-map --style compressed --watch"
+    "watch-min": "sass cool/scss/style.scss cool/css/style.min.css --no-source-map --style compressed --watch",
+    "style": "npm run style-light && npm run style-dark",
+    "style-min": "npm run style-min-light && npm run style-min-dark",
+    "style-light": "sass cool/scss/style.scss cool/css/style.css --no-source-map",
+    "style-min-light": "sass cool/scss/style.scss cool/css/style.min.css --no-source-map --style compressed",
+    "style-dark": "sass cool/scss/style-dark.scss cool/css/style-dark.css --no-source-map",
+    "style-min-dark": "sass cool/scss/style-dark.scss cool/css/style-dark.min.css --no-source-map --style compressed"
   },
   "keywords": [],
   "author": "",
